# Proyectos

./: .gitignore  Clase4-Hanoi.cpp  README.md  lab5.cpp
Arduino/ProyectoADC/: ProyectoADC.ino
CPP/: descargarLista.cpp  stdout.cpp
Java/TablaHash-JFrame/: pom.xml
Java/TareasPendientes/: pom.xml
Laravel/api-funciones/: .env.example
Laravel/management-api/: .env.example
Laravel/management-api/resources/views/: welcome.blade.php
MySQL/database/: model.mwb  model.mwb.bak
OpenCV/: run.bat
OpenCV/Filtros/: README.md  run.bat  run.sh
OpenCV/Filtros/source/: CMakeLists.txt  step1.cpp
OpenCV/source/: CMakeLists.txt  step1.cpp
OpenGL/CuboRotando/: CubeRotXYZ.cpp  cr
OpenGL/GameOfLife/: GameOfLife.cpp  gol
OpenGL/SistemaSolar/: SistemaSolar.cpp  ss
OpenGL/Tetera/: Tetera.cpp  tetera
Paralela/: SIEGE.c  pagerank.c  tfidf1.c  tfidf2.c  tfidf3.c
Paralela/1/: out1  out2  out3
Paralela/1/input/: c_function_strtok.htm
Paralela/2/: GEMM.c
Paralela/input/: c_function_strtok.htm
ProyectoCineOasis/admin-frontend/: package-lock.json  package.json  tailwind.config.js
ProyectoCineOasis/admin-frontend/src/: App.jsx  index.css
ProyectoCineOasis/admin-frontend/src/components/: dashboard.jsx  navbar.jsx  reportes.jsx
React/admin-frontend/: tailwind.config.js
algoritmos/: run.sh
algoritmos/source/: CMakeLists.txt  ordenamiento.cpp
python/: BackpropagationXOR.ipynb  NeuralNetwork.py  PerceptronSimple_3Entradas_AND.ipynb  PerceptronSimple_OR.ipynb  backpropagationXORv2.ipynb  backpropagationXORv3.ipynb  neurona.py  testing_rn_multicapa.ipynb
(+11 files in other folders)
